nulljcd.gpu-pt.2727dc6c9a0cd7c148537fe53d0aa0a8f7ed395f
Running as unit: run-p2458663-i15038769.scope; invocation ID: 16bf711037a0412c8f4e8daa5e8a1391
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling libm v0.2.15
   Compiling autocfg v1.5.0
    Checking cfg-if v1.0.4
   Compiling cfg_aliases v0.2.1
    Checking bitflags v2.10.0
   Compiling crossbeam-utils v0.8.21
   Compiling thiserror v2.0.17
   Compiling libc v0.2.177
    Checking arrayvec v0.7.6
   Compiling num-traits v0.2.19
   Compiling zerocopy v0.8.31
    Checking log v0.4.28
   Compiling rayon-core v1.13.0
    Checking smallvec v1.15.1
    Checking crossbeam-epoch v0.9.18
   Compiling syn v2.0.111
    Checking simd-adler32 v0.3.7
   Compiling anyhow v1.0.100
    Checking memchr v2.7.6
    Checking crossbeam-deque v0.8.6
    Checking foldhash v0.2.0
    Checking either v1.15.0
   Compiling parking_lot_core v0.9.12
    Checking hashbrown v0.16.1
   Compiling naga v27.0.3
    Checking libloading v0.8.9
   Compiling khronos-egl v6.0.0
    Checking foldhash v0.1.5
    Checking adler2 v2.0.1
    Checking stable_deref_trait v1.2.1
    Checking equivalent v1.0.2
   Compiling crc32fast v1.5.0
   Compiling ash v0.38.0+1.3.281
    Checking num-integer v0.1.46
    Checking scopeguard v1.2.0
    Checking unicode-width v0.2.2
    Checking bit-vec v0.8.0
    Checking lock_api v0.4.14
    Checking codespan-reporting v0.12.0
    Checking num-bigint v0.4.6
    Checking indexmap v2.12.1
    Checking bit-set v0.8.0
    Checking miniz_oxide v0.8.9
    Checking as-slice v0.2.1
    Checking hashbrown v0.15.5
    Checking rayon v1.11.0
    Checking gpu-alloc-types v0.3.0
    Checking gpu-descriptor-types v0.2.0
    Checking spirv v0.3.0+sdk-1.3.268.0
   Compiling wgpu-hal v27.0.4
   Compiling av-scenechange v0.14.1
    Checking hexf-parse v0.2.1
    Checking rustc-hash v1.1.0
   Compiling built v0.8.0
    Checking num-rational v0.4.2
   Compiling paste v1.0.15
    Checking once_cell v1.21.3
    Checking gpu-descriptor v0.3.2
    Checking gpu-alloc v0.6.0
    Checking parking_lot v0.12.5
   Compiling rav1e v0.8.1
    Checking aligned v0.4.2
    Checking ordered-float v5.1.0
    Checking core2 v0.4.0
    Checking nom v8.0.0
    Checking y4m v0.8.0
    Checking glow v0.16.0
    Checking raw-window-handle v0.6.2
    Checking quick-error v2.0.1
    Checking renderdoc-sys v1.1.0
   Compiling pastey v0.1.1
    Checking bitstream-io v4.9.0
    Checking maybe-rayon v0.1.1
    Checking flate2 v1.1.5
    Checking itertools v0.14.0
   Compiling simd_helpers v0.1.0
   Compiling wgpu-core v27.0.3
   Compiling noop_proc_macro v0.3.0
   Compiling litrs v1.0.0
    Checking weezl v0.1.12
    Checking imgref v1.12.0
    Checking new_debug_unreachable v1.0.6
    Checking zune-core v0.4.12
   Compiling document-features v0.2.12
    Checking zune-jpeg v0.4.21
   Compiling thiserror-impl v2.0.17
   Compiling zerocopy-derive v0.8.31
   Compiling bytemuck_derive v1.10.2
   Compiling profiling-procmacros v1.0.17
   Compiling equator-macro v0.4.2
    Checking equator v0.4.2
    Checking profiling v1.0.17
   Compiling arg_enum_proc_macro v0.3.4
    Checking aligned-vec v0.6.4
    Checking bytemuck v1.24.0
    Checking v_frame v0.3.9
   Compiling fax_derive v0.2.0
    Checking wgpu-types v27.0.1
   Compiling num-derive v0.4.2
    Checking fax v0.2.6
    Checking loop9 v0.1.5
    Checking pxfm v0.1.26
    Checking zune-inflate v0.2.54
    Checking fdeflate v0.3.7
    Checking avif-serialize v0.8.6
    Checking half v2.7.1
   Compiling wgpu v27.0.1
    Checking zune-core v0.5.0
    Checking color_quant v1.1.0
    Checking bit_field v0.10.3
    Checking lebe v0.5.3
    Checking byteorder-lite v0.1.0
    Checking rgb v0.8.52
    Checking image-webp v0.2.4
    Checking exr v1.74.0
    Checking moxcms v0.7.10
    Checking gif v0.14.0
    Checking zune-jpeg v0.5.5
    Checking tiff v0.10.3
    Checking png v0.18.0
    Checking qoi v0.4.1
    Checking static_assertions v1.1.0
    Checking pollster v0.4.0
    Checking glam v0.30.9
    Checking av1-grain v0.2.5
    Checking wgpu-core-deps-windows-linux-android v27.0.0
error[E0275]: overflow evaluating the requirement `&global::Global: Send`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:99:19
   |
99 |     test_internal(global)
   |     ------------- ^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`wgpu_core`)
note: required by a bound in `test_internal`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:98:25
   |
98 |     fn test_internal<T: Send + Sync>(_: T) {}
   |                         ^^^^ required by this bound in `test_internal`

error[E0275]: overflow evaluating the requirement `&global::Global: Sync`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:99:19
   |
99 |     test_internal(global)
   |     ------------- ^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`wgpu_core`)
note: required by a bound in `test_internal`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/wgpu-core-27.0.3/src/global.rs:98:32
   |
98 |     fn test_internal<T: Send + Sync>(_: T) {}
   |                                ^^^^ required by this bound in `test_internal`

For more information about this error, try `rustc --explain E0275`.
    Checking ravif v0.12.0
error: could not compile `wgpu-core` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
